# DIT_admin

./: CRON_SETUP.md  README.md  main.py  manage.py  pyproject.toml  requirments.txt
DIT_admin/: asgi.py  settings.py  urls.py  wsgi.py
coinmarketcap/: models.py  serializers.py  urls.py  views.py
diora_reward/: QUICKSTART.md  README.md  __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
diora_reward/migrations/: 0001_initial.py  0002_rewarddistribution_log_index_and_more.py  0003_alter_userrewardclaim_log_index.py  0004_pendingreward.py
diora_reward/services/: blockchain_service.py
donation/: admin.py  models.py  serializers.py  urls.py  views.py
donation/migrations/: 0001_initial.py  0002_alter_donation_receiver_address.py  0003_rename_amount_donation_dit_amount.py  0004_rename_purchase_date_donation_donated_at.py
event/: admin.py  models.py  tests.py
event/migrations/: 0001_initial.py
external_users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
external_users/migrations/: 0001_initial.py
external_users/templatetags/: querystring_utils.py
membership/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
membership/migrations/: 0001_initial.py  0002_membership_email_membership_quantity.py  0003_alter_membership_options_and_more.py
nft_reward/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
nft_reward/migrations/: 0001_initial.py
presale/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
presale/migrations/: 0001_initial.py  (+2 more)
scripts/: sync_blockchain.sh
(+8 files in other folders)
